styles/_header.scss
// HEADER styles
.results-header {
  text-align: center;
  max-width: 900px;

  h1 {
    padding-top: 0.3em;
    line-height: 1.1em;
    margin-bottom: 0em;

    @media (max-width: 768px){
      margin-bottom: .5em;
    }
  }

  h5 {
    text-transform: uppercase;
    font-size: 0.9em;
    letter-spacing: 0.08em;
    padding-top: 40px;
  }


  // NAV default styles

  .l-navigation-shortnav-container {
    box-shadow: none;
  }

  #navigation {
    width: 100%;
    background-color: white;
    z-index: 150;
  }

  .sticky {
    position: fixed;
    left: 0;
    top: 40px;
    width: 100%;
    padding-top: 20px;
    padding-bottom: 17px;
    border-bottom: 1px solid #e8e8e8;
    @media (max-width: 545px) {
      padding-bottom: 0px;
    }
  }

  // Placeholder
  .navigation-placeholder {
    display: none;

    &.sticky-on {
      display: block;
    }
  }

  nav ul {
    width: 100%;
    display: block;
    text-align: center;
    margin: 60px auto 20px auto;
  }

  .sticky nav ul {
    max-width: 900px;
    margin: 0px auto;
  }

  nav ul li.main-nav {
    background-color: white;
    text-transform: uppercase;
    font-size: 0.75em;
    font-family: "Benton Sans";
    border: 1px solid #080808;
    border-radius: 6px;
    margin-right: 12px;
    min-width: 15%;
    position: relative;
  }

  nav ul li.nodrop {
    padding: 6px 10px 6px 10px;
  }

  nav ul li.drop {
    padding: 6px 10px 4px 10px;
  }

  nav ul li span {
    padding-left: 5px;
  }

  nav ul li img {
    width: 18px;
    -webkit-transform: rotateZ(90deg);
    -moz-transform: rotateZ(90deg);
    transform: rotateZ(90deg);
  }

  nav ul li:last-child {
    margin-right: 0;
  }

  nav ul li a,
  nav ul li a:link,
  nav ul li a:visited {
    color: #080808;
  }

  nav ul li.main-nav ul.nav-dropdown li {
    border: none;
    display: block;
    text-align: left;
    font-size: 0.95em;
    letter-spacing: 0.05em;
    padding: 8px 10px;
    margin: 0px;
  }

  nav ul li.main-nav ul.nav-dropdown {
    position: absolute;
    z-index: 2;
    left: 0;
    background-color: #f5f5f5;
    border: 1px solid #666;
    border-radius: 0px 0px 6px 6px;
    border-top: 0px;
    margin: 5px 0px;
    visibility: hidden;
    opacity: 0;
    filter: alpha(opacity=0);
    -webkit-transition: 300ms ease;
    -moz-transition: 300ms ease;
    -o-transition: 300ms ease;
    transition: 300ms ease;
  }

  nav.visible-phone {
    position: relative;
    font-family: "Benton Sans";
    max-width: 70%;
    margin: auto;
    cursor: pointer;
  }

  nav select option {
    text-transform: uppercase;
    font-weight: bold;
    padding: 5px 0px 5px 0px;
  }

  nav select option.sub {
    font-weight: normal;
    text-transform: capitalize;
  }

  #drop-nav {
    display: none;
  }

  @media (max-width: 545px) {
    #button-nav {
      display: none;
    }

    #drop-nav {
      display: block;
    }
  }

  // NAV hover states

  nav ul li:hover {
    color: #666;
    border: 1px solid #666;
    border-radius: 6px;
    cursor: pointer;
    background-color: #eee;
  }

  nav ul a:hover li, nav ul li:hover a, nav ul li a:hover{
    color: #666;
  }

  nav ul a:hover li{
    background-color: #eee;
    border: 1px solid #666;
    border-radius: 6px;
  }

  nav ul li:hover ul.nav-dropdown {
    visibility: visible;
    opacity: 1;
    filter: alpha(opacity=100);
  }
}

